# shooter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: ubuntu.yml
include/: asset_manager.h  game.h  object.h  scene.h  scene_editor.h  scene_model.h
res/: Field.json  default_scene.json  field.json
res/models/: cube.glb  plane.glb  sphere.glb
src/: CMakeLists.txt  asset_manager.cpp  editor_main.cpp  game.cpp  object.cpp  scene.cpp  scene_editor.cpp  scene_model.cpp
